overflow bug fix && add about

--- a/src/components/cover/cover.scss
+++ b/src/components/cover/cover.scss
@@ -12,7 +12,7 @@
         position: absolute;
         width:100%;
         height:100%;
-        background: rgba(0, 0, 0, 0.548);
+        background: rgba(0, 0, 0, 0.733);
         .desc_Container{
             position: relative;
             width:60%;
